--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
-    "express": "~4.13.1",
+    "express": "4.13.4",
     "express-flash": "0.0.2",
     "express-session": "^1.13.0",
     "morgan": "~1.6.1",
