--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "v1",
+  "name": "smarky",
   "version": "1.0.0",
   "author": "Mohamed Ayman",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "engines": {
     "node": "5.10.1"
@@ -15,6 +15,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "debug-log": "^1.0.0",
     "ejs": "~2.3.3",
     "express": "4.13.4",
     "express-flash": "0.0.2",
