--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Mohamed Ayman",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node ./bin/www"
   },
   "engines": {
     "node": "5.10.1"
